force-app/main/default/objects/Referral_Source__c/Referral_Source__c.object-meta.xml
<CustomObject>
    <label>Referral Source</label>
    <nameField>
        <label>Referral Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Source</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>