force-app/main/default/objects/Referral_Source__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>CRM_User__c</referenceTo>
    <relationshipLabel>Referral Source</relationshipLabel>
    <relationshipName>Referral_Source</relationshipName>
    <type>Lookup</type>
</CustomField>