force-app/main/default/objects/Referral_Source__c/fields/Employees_Count__c.field-meta.xml
<CustomField>
    <fullName>Employees_Count__c</fullName>
    <label>Employees Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>