force-app/main/default/objects/Referral_Source__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Tier</fullName>
            </value>
            <value>
                <fullName>B Tier</fullName>
            </value>
            <value>
                <fullName>Dead - Will not Refer Again</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>