force-app/main/default/objects/Referral_Source__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>