force-app/main/default/objects/Referral_Source__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Patient</fullName>
            </value>
            <value>
                <fullName>Recruit</fullName>
            </value>
            <value>
                <fullName>Employer/EAP/Union</fullName>
            </value>
            <value>
                <fullName>Referral Partner/Vendor</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Private Practice</fullName>
            </value>
            <value>
                <fullName>Interventionist</fullName>
            </value>
            <value>
                <fullName>Mental Health Practice</fullName>
            </value>
            <value>
                <fullName>Legal/Court System</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>